--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,14 +1,23 @@
 version: 0.2
 
 phases:
+  install:
+    runtime-versions:
+      java: corretto11
+    commands:
+      - echo "Installing dependencies..."
+  pre_build:
+    commands:
+      - echo "Running pre-build commands..."
   build:
     commands:
-      - echo Entered the build phase...
+      - echo "Building the application..."
       - mvn clean package
   post_build:
     commands:
-      - echo Build completed successfully
+      - echo "Build completed."
+
 artifacts:
   files:
-    - target/order-service.jar
+    - target/demo-*.jar
   discard-paths: yes
